Handle case without active transaction. Refactor.